--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,7 @@ a:hover {
 .profile-img{
   height: 180px;
   width:180;
-border-radius: 50px;
+border-radius: 100px;
 border: solid 5px;
 }
 
@@ -103,12 +103,12 @@ border: solid 5px;
 
 .footer-link{
   color:#086972;
-  text-decoration: underline;
+  text-decoration: none;
 }
 
 .copyright {
   color: #EAF6F6;
-  font-size: 1rem;
+  font-size: 0.75rem;
   padding: 20px 0;
 }
 
